KIARA/src/main/java/de/dfki/kiara/idl/KiaraParser.java
// Generated from /home/rubinste/proj_de3/kiara_java/KIARA_Java/KIARA/src/main/java/de/dfki/kiara/idl/Kiara.g4 by ANTLR 4.2.2
package de.dfki.kiara.idl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KiaraParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INCLUDE=1, NAMESPACE=2, TYPEDEF=3, ENUM=4, SENUM=5, CONST=6, STRUCT=7,
		UNION=8, XSD_ALL=9, XSD_OPTIONAL=10, XSD_NILLABLE=11, XSD_ATTRIBUTES=12,
		EXCEPTION=13, SERVICE=14, EXTENDS=15, ONEWAY=16, THROWS=17, REQUIRED=18,
		OPTIONAL=19, ANNOTATION=20, VOID=21, STRING=22, BINARY=23, SLIST=24, BOOLEAN=25,
		I8=26, U8=27, I16=28, U16=29, I32=30, U32=31, I64=32, U64=33, FLOAT=34,
		DOUBLE=35, ANY=36, STAR=37, COMMA=38, COLON=39, SEMI=40, LBRACE=41, RBRACE=42,
		LBRACKET=43, RBRACKET=44, LPAREN=45, RPAREN=46, EQ=47, LT=48, GT=49, INTCONSTANT=50,
		HEXCONSTANT=51, DUBCONSTANT=52, IDENTIFIER=53, WHITESPACE=54, COMMENT=55,
		UNIXCOMMENT=56, ST_IDENTIFIER=57, LITERAL=58;
	public static final String[] tokenNames = {
		"<INVALID>", "'include'", "'namespace'", "'typedef'", "'enum'", "'senum'",
		"'const'", "'struct'", "'union'", "'xsd_all'", "'xsd_optional'", "'xsd_nillable'",
		"'xsd_attributes'", "'exception'", "'service'", "'extends'", "'oneway'",
		"'throws'", "'required'", "'optional'", "'annotation'", "'void'", "'string'",
		"'binary'", "'slist'", "'boolean'", "'i8'", "'u8'", "'i16'", "'u16'",
		"'i32'", "'u32'", "'i64'", "'u64'", "'float'", "'double'", "'any'", "'*'",
		"','", "':'", "';'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'='",
		"'<'", "'>'", "INTCONSTANT", "HEXCONSTANT", "DUBCONSTANT", "IDENTIFIER",
		"WHITESPACE", "COMMENT", "UNIXCOMMENT", "ST_IDENTIFIER", "LITERAL"
	};
	public static final int
		RULE_program = 0, RULE_header_list = 1, RULE_header = 2, RULE_definition_list = 3,
		RULE_definition = 4, RULE_typeDefinition = 5, RULE_nonAnnotatedTypeDefinition = 6,
		RULE_annotatedTypeDefinition = 7, RULE_typedef = 8, RULE_commaOrSemicolon = 9,
		RULE_enum_t = 10, RULE_enumDef = 11, RULE_senum = 12, RULE_senumDef = 13,
		RULE_constDefinition = 14, RULE_constValue = 15, RULE_constList = 16,
		RULE_constMap = 17, RULE_constValuePair = 18, RULE_struct = 19, RULE_union = 20,
		RULE_xsdAll = 21, RULE_xsdOptional = 22, RULE_xsdNillable = 23, RULE_xsdAttributes = 24,
		RULE_xception = 25, RULE_annotationDef = 26, RULE_service = 27, RULE_function = 28,
		RULE_throwz = 29, RULE_field = 30, RULE_fieldIdentifier = 31, RULE_fieldRequiredness = 32,
		RULE_fieldValue = 33, RULE_functionType = 34, RULE_fieldType = 35, RULE_baseType = 36,
		RULE_simpleBaseType = 37, RULE_genericType = 38, RULE_simpleGenericType = 39,
		RULE_genericTypeArg = 40, RULE_genericTypeArgList = 41, RULE_annotationList = 42,
		RULE_nonEmptyAnnotationList = 43, RULE_annotation = 44, RULE_annotationArg = 45,
		RULE_annotationArgList = 46, RULE_nonEmptyAnnotationArgList = 47, RULE_intConstant = 48;
	public static final String[] ruleNames = {
		"program", "header_list", "header", "definition_list", "definition", "typeDefinition",
		"nonAnnotatedTypeDefinition", "annotatedTypeDefinition", "typedef", "commaOrSemicolon",
		"enum_t", "enumDef", "senum", "senumDef", "constDefinition", "constValue",
		"constList", "constMap", "constValuePair", "struct", "union", "xsdAll",
		"xsdOptional", "xsdNillable", "xsdAttributes", "xception", "annotationDef",
		"service", "function", "throwz", "field", "fieldIdentifier", "fieldRequiredness",
		"fieldValue", "functionType", "fieldType", "baseType", "simpleBaseType",
		"genericType", "simpleGenericType", "genericTypeArg", "genericTypeArgList",
		"annotationList", "nonEmptyAnnotationList", "annotation", "annotationArg",
		"annotationArgList", "nonEmptyAnnotationArgList", "intConstant"
	};

	@Override
	public String getGrammarFileName() { return "Kiara.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KiaraParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Header_listContext header_list() {
			return getRuleContext(Header_listContext.class,0);
		}
		public Definition_listContext definition_list() {
			return getRuleContext(Definition_listContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); header_list();
			setState(99); definition_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_listContext extends ParserRuleContext {
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public Header_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterHeader_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitHeader_list(this);
		}
	}

	public final Header_listContext header_list() throws RecognitionException {
		Header_listContext _localctx = new Header_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE || _la==NAMESPACE) {
				{
				{
				setState(101); header();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Token t;
		public Token n;
		public TerminalNode INCLUDE() { return getToken(KiaraParser.INCLUDE, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(KiaraParser.IDENTIFIER, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(KiaraParser.IDENTIFIER); }
		public TerminalNode LITERAL() { return getToken(KiaraParser.LITERAL, 0); }
		public TerminalNode STAR() { return getToken(KiaraParser.STAR, 0); }
		public TerminalNode NAMESPACE() { return getToken(KiaraParser.NAMESPACE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107); match(INCLUDE);
				setState(108); match(LITERAL);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109); match(NAMESPACE);
				setState(110); ((HeaderContext)_localctx).t = match(IDENTIFIER);
				setState(111); ((HeaderContext)_localctx).n = match(IDENTIFIER);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112); match(NAMESPACE);
				setState(113); match(STAR);
				setState(114); match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definition_listContext extends ParserRuleContext {
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public Definition_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterDefinition_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitDefinition_list(this);
		}
	}

	public final Definition_listContext definition_list() throws RecognitionException {
		Definition_listContext _localctx = new Definition_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definition_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPEDEF) | (1L << ENUM) | (1L << SENUM) | (1L << CONST) | (1L << STRUCT) | (1L << UNION) | (1L << EXCEPTION) | (1L << SERVICE) | (1L << ANNOTATION) | (1L << LBRACKET))) != 0)) {
				{
				{
				setState(117); definition();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public TypeDefinitionContext typeDefinition() {
			return getRuleContext(TypeDefinitionContext.class,0);
		}
		public ServiceContext service() {
			return getRuleContext(ServiceContext.class,0);
		}
		public ConstDefinitionContext constDefinition() {
			return getRuleContext(ConstDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definition);
		try {
			setState(126);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123); constDefinition();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124); typeDefinition();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125); service();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDefinitionContext extends ParserRuleContext {
		public AnnotationListContext annotationList() {
			return getRuleContext(AnnotationListContext.class,0);
		}
		public AnnotatedTypeDefinitionContext annotatedTypeDefinition() {
			return getRuleContext(AnnotatedTypeDefinitionContext.class,0);
		}
		public NonAnnotatedTypeDefinitionContext nonAnnotatedTypeDefinition() {
			return getRuleContext(NonAnnotatedTypeDefinitionContext.class,0);
		}
		public TypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterTypeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitTypeDefinition(this);
		}
	}

	public final TypeDefinitionContext typeDefinition() throws RecognitionException {
		TypeDefinitionContext _localctx = new TypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeDefinition);
		try {
			setState(132);
			switch (_input.LA(1)) {
			case TYPEDEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(128); nonAnnotatedTypeDefinition();
				}
				break;
			case ENUM:
			case SENUM:
			case STRUCT:
			case UNION:
			case EXCEPTION:
			case ANNOTATION:
			case LBRACKET:
				enterOuterAlt(_localctx, 2);
				{
				setState(129); annotationList();
				setState(130); annotatedTypeDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonAnnotatedTypeDefinitionContext extends ParserRuleContext {
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public NonAnnotatedTypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonAnnotatedTypeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterNonAnnotatedTypeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitNonAnnotatedTypeDefinition(this);
		}
	}

	public final NonAnnotatedTypeDefinitionContext nonAnnotatedTypeDefinition() throws RecognitionException {
		NonAnnotatedTypeDefinitionContext _localctx = new NonAnnotatedTypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nonAnnotatedTypeDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); typedef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotatedTypeDefinitionContext extends ParserRuleContext {
		public SenumContext senum() {
			return getRuleContext(SenumContext.class,0);
		}
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public AnnotationDefContext annotationDef() {
			return getRuleContext(AnnotationDefContext.class,0);
		}
		public Enum_tContext enum_t() {
			return getRuleContext(Enum_tContext.class,0);
		}
		public UnionContext union() {
			return getRuleContext(UnionContext.class,0);
		}
		public XceptionContext xception() {
			return getRuleContext(XceptionContext.class,0);
		}
		public AnnotatedTypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotatedTypeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterAnnotatedTypeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitAnnotatedTypeDefinition(this);
		}
	}

	public final AnnotatedTypeDefinitionContext annotatedTypeDefinition() throws RecognitionException {
		AnnotatedTypeDefinitionContext _localctx = new AnnotatedTypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_annotatedTypeDefinition);
		try {
			setState(142);
			switch (_input.LA(1)) {
			case ENUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(136); enum_t();
				}
				break;
			case SENUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(137); senum();
				}
				break;
			case STRUCT:
				enterOuterAlt(_localctx, 3);
				{
				setState(138); struct();
				}
				break;
			case UNION:
				enterOuterAlt(_localctx, 4);
				{
				setState(139); union();
				}
				break;
			case EXCEPTION:
				enterOuterAlt(_localctx, 5);
				{
				setState(140); xception();
				}
				break;
			case ANNOTATION:
				enterOuterAlt(_localctx, 6);
				{
				setState(141); annotationDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public TerminalNode TYPEDEF() { return getToken(KiaraParser.TYPEDEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(KiaraParser.IDENTIFIER, 0); }
		public FieldTypeContext fieldType() {
			return getRuleContext(FieldTypeContext.class,0);
		}
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitTypedef(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typedef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(TYPEDEF);
			setState(145); fieldType();
			setState(146); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommaOrSemicolonContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(KiaraParser.SEMI, 0); }
		public TerminalNode COMMA() { return getToken(KiaraParser.COMMA, 0); }
		public CommaOrSemicolonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commaOrSemicolon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterCommaOrSemicolon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitCommaOrSemicolon(this);
		}
	}

	public final CommaOrSemicolonContext commaOrSemicolon() throws RecognitionException {
		CommaOrSemicolonContext _localctx = new CommaOrSemicolonContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_commaOrSemicolon);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_la = _input.LA(1);
			if ( !(_la==COMMA || _la==SEMI) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enum_tContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(KiaraParser.LBRACE, 0); }
		public TerminalNode ENUM() { return getToken(KiaraParser.ENUM, 0); }
		public TerminalNode IDENTIFIER() { return getToken(KiaraParser.IDENTIFIER, 0); }
		public EnumDefContext enumDef(int i) {
			return getRuleContext(EnumDefContext.class,i);
		}
		public List<EnumDefContext> enumDef() {
			return getRuleContexts(EnumDefContext.class);
		}
		public TerminalNode RBRACE() { return getToken(KiaraParser.RBRACE, 0); }
		public Enum_tContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterEnum_t(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitEnum_t(this);
		}
	}

	public final Enum_tContext enum_t() throws RecognitionException {
		Enum_tContext _localctx = new Enum_tContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_enum_t);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); match(ENUM);
			setState(151); match(IDENTIFIER);
			setState(152); match(LBRACE);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(153); enumDef();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumDefContext extends ParserRuleContext {
		public IntConstantContext intConstant() {
			return getRuleContext(IntConstantContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(KiaraParser.IDENTIFIER, 0); }
		public CommaOrSemicolonContext commaOrSemicolon() {
			return getRuleContext(CommaOrSemicolonContext.class,0);
		}
		public TerminalNode EQ() { return getToken(KiaraParser.EQ, 0); }
		public EnumDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).enterEnumDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KiaraListener ) ((KiaraListener)listener).exitEnumDef(this);
		}
	}
